--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <div id="top"> 
     <header> 
      <h1><a href="/"><img src="https://cloud.githubusercontent.com/assets/2464813/12016782/38687d10-ad47-11e5-9e58-2bfc7d9e473f.png"></a></h1> 
-    </header> 
+    </header>
     <!-- <article id="menu"> 
      <ul class="menu"> 
       <li id="menu-clan-ranks"><a href="/rankings/">Clan Ranks</a></li> 
@@ -42,7 +42,15 @@
       <li><a id="reg-menu-play" href="/play/" class="button-error pure-button">Play!</a></li> 
      </ul> 
     </article>  -->
-   </div> 
+   </div>
+	<div id="menu">
+		<ul class="vertical-menu">
+			<li class="vm-item"><a href="#">Ranks</a></li>
+			<li class="vm-item"><a href="#">Wars</a></li>
+			<li class="vm-item"><a href="#">Servers</a></li>
+			<li class="vm-item"><a href="#">Gitter</a></li>
+		</ul>
+	</div>
    <!-- <div id="register-play-button"> 
    </div> --> 
    <div id="content" data-has-json="has-json"> 
