--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
      </ul> 
     </article>  -->
    </div>
-	<div id="menu">
-		<ul class="vertical-menu">
+   <div class="vertical-menu">
+		<ul>
 			<li class="vm-item"><a href="#">Ranks</a></li>
 			<li class="vm-item"><a href="#">Wars</a></li>
 			<li class="vm-item"><a href="#">Servers</a></li>
 			<li class="vm-item"><a href="#">Gitter</a></li>
 		</ul>
-	</div>
+    </div>
    <!-- <div id="register-play-button"> 
    </div> --> 
    <div id="content" data-has-json="has-json"> 
