fixing menu items

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
    </div>
    <div class="vertical-menu">
 		<ul>
-			<li class="mv-item"><a href="#">Clans Ranks</a></li>
-			<li class="mv-item"><a href="#">Clan Wars</a></li>				
-			<li class="mv-item"><a href="#">Official Clans</a></li>
-			<li class="mv-item"><a href="#">Player Ranks</a></li>
-            <li class="mv-item"><a href="#">Hall Of Fame</a></li>
-            <li class="mv-item"><a href="#">Servers</a></li>
-            <li class="mv-item"><a href="#">FAQ</a></li>
-            <li class="mv-item"><a href="#">Forum</a></li>
-            <li class="mv-item"><a href="#">Gitter</a></li>
-            <li class="mv-item"><a href="#">GitHub</a></li>
+			<li class="vm-item"><a href="#">Clans Ranks</a></li>
+			<li class="vm-item"><a href="#">Clan Wars</a></li>				
+			<li class="vm-item"><a href="#">Official Clans</a></li>
+			<li class="vm-item"><a href="#">Player Ranks</a></li>
+            <li class="vm-item"><a href="#">Hall Of Fame</a></li>
+            <li class="vm-item"><a href="#">Servers</a></li>
+            <li class="vm-item"><a href="#">FAQ</a></li>
+            <li class="vm-item"><a href="#">Forum</a></li>
+            <li class="vm-item"><a href="#">Gitter</a></li>
+            <li class="vm-item"><a href="#">GitHub</a></li>
 		</ul>
     </div>
    <!-- <div id="register-play-button"> 
