--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
      </ul> 
     </article>  -->
    </div>
+   <div class="play">
+		<li><a id="reg-menu-play" href="/play/" class="button-error pure-button">Play!</a></li> 
+   </div>
    <div class="vertical-menu">
 		<ul>
 			<li class="vm-item"><a href="#">Clans Ranks</a></li>
