--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
    </div>
    <div class="play">
 		<li><a id="reg-menu-play" href="/play/" class="button-error pure-button">Play!</a></li> 
+		<a href="ts3server://aura.woop.ac:9988"><img src="https://cloud.githubusercontent.com/assets/2464813/12760873/99820c6e-c9e0-11e5-832d-00c1b61c2e4c.png"></a>
    </div>
    <div class="vertical-menu">
 		<ul>
