testing first container

--- a/index.html
+++ b/index.html
@@ -91,9 +91,16 @@
     </div>  -->
     <div id="games"> 
      <div id="dynamic-games"> 
-     </div> 
+     </div>
+	 
+	 <div id ="block1">
+	 
+	 
+	 </div>
+	 
+	 
      <div id="new-games"></div> 
-     <div id="latest-clanwar"> 
+     <!-- <div id="latest-clanwar"> 
       <article class="GameCard game clanwar" style="background-image: url('https://cloud.githubusercontent.com/assets/2464813/12814159/d5a55016-cb34-11e5-9eca-2321924b0b4a.png')"> 
        <div class="w"> 
         <header> 
@@ -121,7 +128,7 @@
         </div> 
        </div> 
       </article> 
-     </div> 
+     </div>  -->
      <div id="existing-games"> 
       <article class="GameCard game " style="background-image: url('https://cloud.githubusercontent.com/assets/5359646/12695157/1bffd958-c745-11e5-83c7-ed9144405076.jpg')"> 
        <div class="w"> 
